# drone_space

./: .gitignore  .gitmodules  README.md
docker_drone/: Dockerfile
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/decision_node/share/decision_node/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml
install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/px4_msgs/share/px4_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  px4_msgsConfig-version.cmake  px4_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/px4_msgs/share/px4_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/px4_msgs/share/px4_msgs/msg/: ActionRequest.idl  ActionRequest.msg  ActuatorArmed.idl  ActuatorArmed.msg  ActuatorControlsStatus.idl  ActuatorControlsStatus.msg  ActuatorMotors.idl  ActuatorMotors.msg  ActuatorOutputs.idl  ActuatorOutputs.msg  ActuatorServos.idl  ActuatorServos.msg  ActuatorServosTrim.idl  ActuatorServosTrim.msg  ActuatorTest.idl  ActuatorTest.msg  AdcReport.idl  AdcReport.msg  Airspeed.idl  Airspeed.msg  AirspeedValidated.idl  AirspeedValidated.msg  AirspeedWind.idl  AirspeedWind.msg  ArmingCheckReply.idl  ArmingCheckReply.msg  ArmingCheckRequest.idl  ArmingCheckRequest.msg  AutotuneAttitudeControlStatus.idl  AutotuneAttitudeControlStatus.msg  BatteryInfo.idl  BatteryInfo.msg  BatteryStatus.idl  BatteryStatus.msg  ButtonEvent.idl  ButtonEvent.msg  CameraCapture.idl  CameraCapture.msg  CameraStatus.idl  CameraStatus.msg  (+442 more)
install/px4_msgs/share/px4_msgs/srv/: VehicleCommand.idl  VehicleCommand.srv  VehicleCommand_Request.msg  VehicleCommand_Response.msg
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/decision_node/share/decision_node/: package.sh  package.zsh
ros2_ws/install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
ros2_ws/install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
ros2_ws/log/: latest_build
ros2_ws/src/: .gitignore
ros2_ws/src/decision_node/: CMakeLists.txt  package.xml
ros2_ws/src/decision_node/src/: decision_node.cpp
ros2_ws/src/gz_camera_republisher/: CMakeLists.txt  package.xml
ros2_ws/src/gz_camera_republisher/src/: gz_camera_republisher.cpp
(+3653 files in other folders)
