<?xml version="1.0"?>
<package format="3">
  <name>decision_node</name>
  <version>0.0.1</version>
  <description>PX4 offboard decision node</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
